fixed overflow on mobile

--- a/src/components/aboutme/aboutme.scss
+++ b/src/components/aboutme/aboutme.scss
@@ -45,9 +45,9 @@
     justify-content: center;
     .image-container {
       display: flex;
-      width: 700px;
+      width: 400px;
       position: relative;
-      height: 700px;
+      height: 400px;
       background-color: black;
       border-radius: 400px;
       @include mobile {
@@ -56,15 +56,12 @@
         border-radius: 0;
       }
     }
-    .surf-container {
-      width: 450px;
-      height: 350px;
 
-      img {
-        width: 100%;
-        height: 100%;
-        overflow: hidden;
-      }
+    img {
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      object-fit: contain;
     }
   }
 }
