--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -12,14 +12,10 @@
   .left {
     flex: 0.5;
     background-color: rgb(0, 0, 0);
-
-    .image-container {
-      width: 100%;
-      height: 100%;
-
-      img {
-        height: 100%;
-      }
+    overflow: hidden;
+    .particles {
+      overflow: hidden;
+      height: 90vh;
     }
   }
   .right {
