--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -6,6 +6,7 @@
   align-items: center;
 
   h1 {
+    overflow: hidden;
     font-size: 50px;
     padding-top: 25px;
     color: $mainColor;
@@ -31,12 +32,13 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
     .item {
       display: flex;
-      height: 500px;
-      width: 600px;
+      height: 350px;
+      width: 500px;
       border-radius: 10px;
-
+      overflow: hidden;
       margin: 35px 20px;
       align-items: center;
       justify-content: center;
@@ -44,8 +46,8 @@
       transition: all 0.5s ease;
       cursor: pointer;
       @include mobile {
-        height: 300px;
-        width: 400px;
+        height: 280px;
+        width: 390px;
       }
       h3 {
         position: absolute;
