--- a/src/components/portfolioList/portfolioList.scss
+++ b/src/components/portfolioList/portfolioList.scss
@@ -1,5 +1,6 @@
 @import "../../global.scss";
 .portfolioList {
+  overflow: hidden;
   font-size: 20px;
   margin-right: 50px;
   padding: 12px;
